# market-intel-v1

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  app.py  config.py  docker-compose.yml  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: build_and_push.yml  ci_tests.yml  integration.yml  perf_check.yml  security.yml
api/: dependencies.py  main.py  schemas.py  services.py
api/routes/: analysis.py  backtest.py  market_data.py
docs/: onboarding.md  security.md
k8s/: cronjob-backtest.yaml  cronjob-snapshot.yaml  deployment-app.yaml  network-policy.yaml  rbac.yaml  secrets-example.yaml
monitoring/: grafana_dashboard.json  prometheus_rules.yml
perf/: benchmark.py  verify_parity_backtest.py
reports/: bandit.json  executive_summary.md  perf_baseline.txt  playbook.md  release_audit.md  safety_report.txt  smoke_app.txt  smoke_local.txt
runbooks/: incident_playbook.md  security_incident.md
scripts/: health_check.py  smoke_app.sh  smoke_full.sh
src/: __init__.py  backtest.py  backtest_legacy.py  data_engine.py  features.py  formatting.py  observability.py  run_backtest_cli.py  scorer.py  utils.py
static/: design_tokens.css
tests/: conftest.py  test_backtest.py  test_data_engine.py  test_features.py  test_formatting.py  test_scorer.py  test_utils.py
